crates/validation/tests/snapshots/indirect_specs_tests__flagged_tasks_build_indirect_specs.snap
---
source: crates/validation/tests/indirect_specs_tests.rs
expression: summarize_all(&outcome)
---
capture acmeCo/capture:
  [0] acmeCo/one key=["/id"]
  [1] acmeCo/two key=["/id"]
  ["one", "a"] => [0] acmeCo/one
  ["two", "a"] => [1] acmeCo/two
  ["one", "b"] => [0] acmeCo/one
  ["one", "c"] => [0] acmeCo/one
derivation acmeCo/derived:
  [0] acmeCo/one key=["/id"]
  [1] acmeCo/two key=["/id"]
  fromOneA => [0] acmeCo/one
  fromOneB => [0] acmeCo/one
  fromTwo => [1] acmeCo/two
materialization acmeCo/materialization:
  [0] acmeCo/one key=["/id"]
  [1] acmeCo/one key=["/val"]
  ["m", "one", "by-id"] => [0] acmeCo/one
  ["m", "one", "by-val"] => [1] acmeCo/one
  ["m", "one", "also-by-id"] => [0] acmeCo/one
