crates/validation/tests/snapshots/indirect_specs_tests__indirect_live_unflagged_draft.snap
---
source: crates/validation/tests/indirect_specs_tests.rs
expression: summarize_all(&outcome)
---
capture acmeCo/capture:
  ["one", "a"] => [-] acmeCo/one
  ["one", "b"] => [-] acmeCo/one
  ["two", "a"] => [-] acmeCo/two
materialization acmeCo/materialization:
  ["m", "one"] => [-] acmeCo/one
  ["m", "two"] => [-] acmeCo/two
