crates/validation/tests/snapshots/indirect_specs_tests__inline_live_flagged_draft.snap
---
source: crates/validation/tests/indirect_specs_tests.rs
expression: summarize_all(&outcome)
---
capture acmeCo/capture:
  [0] acmeCo/one key=["/id"]
  [1] acmeCo/one key=[]
  [2] acmeCo/two key=[]
  ["one", "a"] => [0] acmeCo/one
  ["one", "b"] => [1] acmeCo/one
  ["two", "a"] => [2] acmeCo/two
materialization acmeCo/materialization:
  [0] acmeCo/one key=["/id"]
  [1] acmeCo/two key=[]
  ["m", "one"] => [0] acmeCo/one
  ["m", "two"] => [1] acmeCo/two
