crates/validation/tests/snapshots/indirect_specs_tests__invalid_flag_value_errors.snap
---
source: crates/validation/tests/indirect_specs_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1capture/shards/flags,
        error: shard flag indirect-specs must be "true" if set, but is "ture",
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/acmeCo~1materialization/shards/flags,
        error: shard flag indirect-specs must be "true" if set, but is "false",
    },
]
