crates/validation/tests/snapshots/indirect_specs_tests__unflagged_tasks_build_inline_specs.snap
---
source: crates/validation/tests/indirect_specs_tests.rs
expression: summarize_all(&outcome)
---
capture acmeCo/capture:
  ["one", "a"] => [-] acmeCo/one
  ["two", "a"] => [-] acmeCo/two
  ["one", "b"] => [-] acmeCo/one
  ["one", "c"] => [-] acmeCo/one
derivation acmeCo/derived:
  fromOneA => [-] acmeCo/one
  fromOneB => [-] acmeCo/one
  fromTwo => [-] acmeCo/two
materialization acmeCo/materialization:
  ["m", "one", "by-id"] => [-] acmeCo/one
  ["m", "one", "by-val"] => [-] acmeCo/one
  ["m", "one", "also-by-id"] => [-] acmeCo/one
